--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
-    "react-native-gesture-handler": "~2.12.0"
+    "react-router-native": "^6.21.3",
+    "react-router-native-stack": "^0.0.16"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
