--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-input-select": "^1.3.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-snap-carousel-v4": "^1.0.1",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.21.3",
-    "react-router-native-stack": "^0.0.16",
-    "react-native-dropdown-picker": "^5.4.6",
-    "react-native-gesture-handler": "~2.12.0"
+    "react-router-native-stack": "^0.0.16"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "prettier": "^3.2.4"
-},
+  },
   "private": true
 }
