--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-snap-carousel-v4": "^1.0.1",
     "react-native-svg": "^14.1.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.21.3",
     "react-router-native-stack": "^0.0.16"
