--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "prettier": "prettier --write \"**/*.+(js|jsx|json|css|scss|less)\""
+    "prettier": "prettier --write \"**/*.+(js|jsx|json|css|scss|less|tsx|ts)\""
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
@@ -35,7 +35,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "prettier": "^3.2.4"
+    "@tsconfig/react-native": "^3.0.3",
+    "@types/jest": "^29.5.12",
+    "@types/react": "^18.2.59",
+    "@types/react-test-renderer": "^18.0.7",
+    "prettier": "^3.2.4",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
