--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "prettier": "prettier --write \"**/*.+(js|jsx|json|css|scss|less|tsx|ts)\""
+    "lint": "prettier --write \"**/*.+(js|jsx|json|css|scss|less|tsx|ts)\" && npx eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
@@ -39,7 +39,11 @@
     "@types/jest": "^29.5.12",
     "@types/react": "^18.2.59",
     "@types/react-test-renderer": "^18.0.7",
-    "prettier": "^3.2.4",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "prettier": "3.2.5",
     "typescript": "^5.3.3"
   },
   "private": true
