--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-input-select": "^1.3.3",
     "react-native-material-menu": "^2.0.0",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-snap-carousel-v4": "^1.0.1",
     "react-native-svg": "13.9.0",
     "react-native-uuid": "^2.0.1",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.21.3",
     "react-router-native-stack": "^0.0.16"
