--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.21.3",
-    "react-router-native-stack": "^0.0.16"
+    "react-router-native-stack": "^0.0.16",
+    "expo-notifications": "~0.20.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
