--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.7",
     "expo": "~49.0.15",
+    "expo-background-fetch": "~11.3.0",
+    "expo-notifications": "~0.20.1",
     "expo-status-bar": "~1.6.0",
+    "expo-task-manager": "~11.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
@@ -34,8 +37,7 @@
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.21.3",
-    "react-router-native-stack": "^0.0.16",
-    "expo-notifications": "~0.20.1"
+    "react-router-native-stack": "^0.0.16"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
