--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-customisable-alert": "^0.1.20",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-input-select": "^1.3.3",
     "react-native-material-menu": "^2.0.0",
