--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myschedule",
+  "name": "unischedule",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -24,7 +24,7 @@
     "expo-task-manager": "~11.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.72.10",
     "react-native-customisable-alert": "^0.1.20",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-input-select": "^1.3.3",
