--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "prettier --write \"src/**/*.+(js|jsx|json|css|scss|less|tsx|ts)\" && npx eslint \"src/**/*.{js,jsx,ts,tsx}\""
+    "lint": "prettier --write \"src/**/*.+(js|jsx|json|css|scss|less|tsx|ts)\" && npx eslint \"src/**/*.{js,jsx,ts,tsx}\"",
+    "build::doctor": "npx expo-doctor",
+    "build::android": "eas build --platform android",
+    "build::ios": "eas build --platform all"
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
