--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "prettier --write \"src/**/*.+(js|jsx|json|css|scss|less|tsx|ts)\" && npx eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "build::doctor": "npx expo-doctor",
     "build::android": "eas build --platform android",
-    "build::ios": "eas build --platform all"
+    "build::ios": "eas build --platform ios",
+    "build::all": "eas build --platform all"
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
