--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "web": "expo start --web",
     "lint": "prettier --write \"src/**/*.+(js|jsx|json|css|scss|less|tsx|ts)\" && npx eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "build::doctor": "npx expo-doctor",
-    "build::android": "eas build --platform android",
-    "build::ios": "eas build --platform ios",
-    "build::all": "eas build --platform all"
+    "build::android": "eas build -p android --profile preview"
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
